--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import "./reset.css";
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500;600&display=swap');
+@import "./buttons.css";
 
 body {
     font-family: 'Poppins', sans-serif;
@@ -31,6 +32,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 
 /* Nav */
@@ -108,4 +110,80 @@ body {
 
 .user__avatar-img {
     border-radius: 50%;
+}
+
+/* Header Content */
+
+.header__content {
+    display: flex;
+    flex-direction: column;
+    row-gap: 32px;
+    align-items: center;
+}
+
+.header__title {
+    line-height: 1.3;
+    font-weight: 600;
+    font-size: 48px;
+    text-align: center;
+}
+
+/* Form */
+
+.form {
+    display: flex;
+    align-items: center;
+
+    width: 1140px;
+    height: 88px;
+    padding: 8px;
+
+    color: black;
+
+    background-color: #ffffff;
+
+    border-radius: 12px;
+}
+
+.form__input-wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 15px 20px 16px 56px;
+    background-repeat: no-repeat;
+    background-position: 16px 24px;
+}
+
+.form__input--location {
+    width: 300px;
+    background-image: url('./../img/icons/map.svg');
+}
+
+.form__input--activity {
+    width: 255px;
+    background-image: url('./../img/icons/activity.svg');
+}
+
+.form__input--date {
+    width: 255px;
+    background-image: url('./../img/icons/calendar.svg');
+}
+
+.form__input--guests {
+    width: 255px;
+    background-image: url('./../img/icons/guests.svg');
+}
+
+.form__label {
+    font-size: 14px;
+    font-weight: 300;
+    color: #5B5B5B;
+}
+
+.form__input {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.form__input::placeholder {
+    color: #000;
 }
